# GaragemCerta

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessorio.py  0003_cor.py  0004_veiculo.py  0005_alter_acessorio_options_alter_cor_options_and_more.py  0006_alter_veiculo_options_remove_veiculo_categoria_and_more.py
garagem/models/: acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: marca.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
